Added CSRF token to API requests

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Rajdhani&display=swap"
               rel="stylesheet">
 
+        <!-- js-cookie -->
+        <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+
         <!-- API -->
         <script type="text/javascript" src="{% static 'js/api.js' %}"></script>
 
