--- a/templates/book/products.html
+++ b/templates/book/products.html
@@ -118,7 +118,7 @@
                                          class="card-img-top product-card-image img-fluid"
                                              alt="{{ product.name }}">
                                     {% else %}
-                                        <img src="{% static 'images/no_food_image.png' %}"
+                                        <img src="{% static 'images/icons/no_food_image.png' %}"
                                          class="card-img-top product-card-image img-fluid p-3"
                                              alt="{{ product.name }}">
                                     {% endif %}
@@ -218,7 +218,7 @@
                                 style="margin-left: 0"
                                 aria-label="Close"></button>
                     </div>
-                    <form method="post" id="newProductCardForm" enctype="multipart/form-data">
+                    <form method="post" id="newProductCardForm" class="modal-form" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="modal-body mx-auto text-center w-50">
                             <div class="row">
